# StackQueue

./: CMakeLists.txt
lib/: CMakeLists.txt  TQueue.cpp  TQueue.h  TStack.h
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
